# prefect_sweep_mcp

./: README.md  pyproject.toml  template_catalog.py  worker_flow.py
prefect_sweep_mcp/: __init__.py  batch_service.py  config.py  models.py  operator_service.py  platform_store.py  prefect_adapter.py  server.py
prefect_sweep_mcp/tools/: __init__.py
scripts/: cleanup_run_dirs.sh  install_worker.sh
templates/: catalog.yaml
tests/: test_batch_service.py  test_operator_service.py  test_template_catalog.py
